--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 /*================== Import style ==================*/
 @import "../css/bootstrap/bootstrap.min.css";
 /*@import "../css/bootstrap/bootstrap-grid.min.css";*/
+@import "../css/swiper.min.css";
 
 @import "../css/main.css";
 @import "../css/resposive.css";
