--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 /*================== Import style ==================*/
 @import "../css/bootstrap/bootstrap.min.css";
+/*@import "../css/bootstrap/bootstrap-select.min.css";*/
 /*@import "../css/bootstrap/bootstrap-grid.min.css";*/
 @import "../css/swiper.min.css";
 
