--- a/css/resposive.css
+++ b/css/resposive.css
@@ -57,7 +57,7 @@
         display: inline-block;
     }
     .topFooter > div:last-child li a{
-        border: 1px solid var(--color-orange);
+        border: 1px solid var(--color-text);
         border-radius: 4px;
         padding: 0.25rem 0.5rem !important;
         margin-bottom: 0.5rem;
@@ -124,6 +124,9 @@
 @media only screen and (max-width: 480px) {
     h2{
         font-size: 1.5rem;
+    }
+    h3{
+        font-size: 1.2rem;
     }
     .w-50, .w-25{
         width: 100% !important;
