--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,13 @@ a:hover,
 a:active{
     color: var(--color-text);
 }
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
 
 .bg-main{
     background: var(--color-primary);
